--- a/index.html
+++ b/index.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>My First Webpage</title>
-	<link rel="stylesheet" type="text/css" 	href="style.css">
+    <meta charset="UTF-8">
+    <title>Nazik Akmatalyeva</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello, I'm Nazik!</h1>
-    <p>Welcome to my personal website.</p>
+    <div class="container">
+        <header>
+            <img src="profile.jpg" alt="Nazik's Profile Picture" class="profile-pic">
+            <h1>Nazik Akmatalyeva</h1>
+            <p>Student at Von Steuben MSC | Tech Enthusiast | Future Innovator</p>
+        </header>
+
+        <section class="about">
+            <h2>About Me</h2>
+            <p>Hi! I'm Nazik, a high school student passionate about coding, creative projects, and making a difference through technology. I love building websites, exploring new tech tools, and sharing what I learn with others.</p>
+        </section>
+
+        <section class="interests">
+            <h2>My Interests</h2>
+            <ul>
+                <li>Web Development</li>
+                <li>Artificial Intelligence</li>
+                <li>Digital Art</li>
+                <li>Judo 🥋</li>
+                <li>Girls Who Code Club 💻</li>
+            </ul>
+        </section>
+
+        <section class="school">
+            <h2>Education</h2>
+            <p>Von Steuben Metropolitan Science Center</p>
+        </section>
+
+        <section class="extras">
+            <h2>Extracurriculars</h2>
+            <ul>
+                <li>President of Girls Who Code Club</li>
+                <li>State Champion in Judo</li>
+                <li>Participant in Audio Electronics & 3D Design (After School Matters)</li>
+                <li>Science Fair Competitor</li>
+            </ul>
+        </section>
+
+        <section class="contact">
+            <h2>Contact Me</h2>
+            <p>Email: <a href="mailto:akmatalyevanazik@gmail.com">akmatalyevanazik@gmail.com</a></p>
+            <p>Phone: <a href="tel:+17739776631">773-977-6631</a></p>
+        </section>
+
+        <footer>
+            <p>Made with ❤️ by Nazik</p>
+        </footer>
+    </div>
 </body>
 </html>
