--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="profile.jpg" alt="Nazik's Profile Picture" class="profile-pic">
+            <img src="https://via.placeholder.com/150">
             <h1>Nazik Akmatalyeva</h1>
             <p>Student at Von Steuben MSC | Tech Enthusiast | Future Innovator</p>
         </header>
