--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Nazik Akmatalyeva</title>
+    <title>Nazik Akmatalyeva | Resume</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -10,48 +10,63 @@
         <header>
             <img src="https://via.placeholder.com/150">
             <h1>Nazik Akmatalyeva</h1>
-            <p>Student at Von Steuben MSC | Tech Enthusiast | Future Innovator</p>
+            <p>High School Student | STEM Leader | Aspiring Software Engineer</p>
         </header>
 
-        <section class="about">
+        <section>
             <h2>About Me</h2>
-            <p>Hi! I'm Nazik, a high school student passionate about coding, creative projects, and making a difference through technology. I love building websites, exploring new tech tools, and sharing what I learn with others.</p>
+            <p>Hi! I'm Nazik, a dedicated student at Von Steuben MSC with a 4.0 GPA and a passion for technology, innovation, and helping others learn to code. I enjoy building real-world projects and leading initiatives that empower girls in tech.</p>
         </section>
 
-        <section class="interests">
-            <h2>My Interests</h2>
-            <ul>
-                <li>Web Development</li>
-                <li>Artificial Intelligence</li>
-                <li>Digital Art</li>
-                <li>Judo 🥋</li>
-                <li>Girls Who Code Club 💻</li>
-            </ul>
-        </section>
-
-        <section class="school">
+        <section>
             <h2>Education</h2>
-            <p>Von Steuben Metropolitan Science Center</p>
+            <p><strong>Von Steuben Metropolitan Science Center</strong> – Chicago, IL<br>
+            <em>Expected Graduation:</em> 2026<br>
+            <strong>GPA:</strong> 4.0 / 4.0</p>
+            <p>Honors & AP Courses: Chemistry, AP World History, Algebra II, Geometry</p>
         </section>
 
-        <section class="extras">
+        <section>
             <h2>Extracurriculars</h2>
             <ul>
-                <li>President of Girls Who Code Club</li>
-                <li>State Champion in Judo</li>
-                <li>Participant in Audio Electronics & 3D Design (After School Matters)</li>
-                <li>Science Fair Competitor</li>
+                <li><strong>President – Girls Who Code Club:</strong> Teaching web development & running club events</li>
+                <li><strong>Judo Champion:</strong> Multiple state and national medals</li>
+                <li><strong>After School Matters:</strong> Audio Electronics, Web Dev, CAD & 3D Printing</li>
+                <li><strong>DSI Summer Lab (Applied):</strong> University of Chicago research experience</li>
             </ul>
         </section>
 
-        <section class="contact">
-            <h2>Contact Me</h2>
+        <section>
+            <h2>Skills</h2>
+            <ul>
+                <li>Programming: HTML, CSS, JavaScript, Java, Python</li>
+                <li>Tools: Canva, GitHub, Visual Studio Code, Tinkercad</li>
+                <li>Team Leadership, Public Speaking, Problem Solving</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Projects</h2>
+            <ul>
+                <li><strong>Claw Quest:</strong> RPG-style cat game with Java + custom graphics</li>
+                <li><strong>Menstrual Cycle Tracker App:</strong> Passion project for friends and family</li>
+                <li><strong>Social Media AI Infographic:</strong> Canva research challenge entry</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Goals</h2>
+            <p>To attend a top university for Computer Science, grow as a developer, and inspire more young women to explore STEM through leadership, mentoring, and community impact.</p>
+        </section>
+
+        <section>
+            <h2>Contact</h2>
             <p>Email: <a href="mailto:akmatalyevanazik@gmail.com">akmatalyevanazik@gmail.com</a></p>
             <p>Phone: <a href="tel:+17739776631">773-977-6631</a></p>
         </section>
 
         <footer>
-            <p>Made with ❤️ by Nazik</p>
+            <p>© 2025 Nazik Akmatalyeva | Built with 💻 and ☕</p>
         </footer>
     </div>
 </body>
