--- a/index.html
+++ b/index.html
@@ -1,73 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Nazik Akmatalyeva | Resume</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Nazik Akmatalyeva | Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700&display=swap" rel="stylesheet">
+  <script defer src="script.js"></script>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <img src="https://via.placeholder.com/150">
-            <h1>Nazik Akmatalyeva</h1>
-            <p>High School Student | STEM Leader | Aspiring Software Engineer</p>
-        </header>
+  <nav class="navbar">
+    <div class="nav-logo">Nazik</div>
+    <ul class="nav-links">
+      <li><a href="#about">About</a></li>
+      <li><a href="#education">Education</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
 
-        <section>
-            <h2>About Me</h2>
-            <p>Hi! I'm Nazik, a dedicated student at Von Steuben MSC with a 4.0 GPA and a passion for technology, innovation, and helping others learn to code. I enjoy building real-world projects and leading initiatives that empower girls in tech.</p>
-        </section>
-
-        <section>
-            <h2>Education</h2>
-            <p><strong>Von Steuben Metropolitan Science Center</strong> – Chicago, IL<br>
-            <em>Expected Graduation:</em> 2026<br>
-            <strong>GPA:</strong> 4.0 / 4.0</p>
-            <p>Honors & AP Courses: Chemistry, AP World History, Algebra II, Geometry</p>
-        </section>
-
-        <section>
-            <h2>Extracurriculars</h2>
-            <ul>
-                <li><strong>President – Girls Who Code Club:</strong> Teaching web development & running club events</li>
-                <li><strong>Judo Champion:</strong> Multiple state and national medals</li>
-                <li><strong>After School Matters:</strong> Audio Electronics, Web Dev, CAD & 3D Printing</li>
-                <li><strong>DSI Summer Lab (Applied):</strong> University of Chicago research experience</li>
-            </ul>
-        </section>
-
-        <section>
-            <h2>Skills</h2>
-            <ul>
-                <li>Programming: HTML, CSS, JavaScript, Java, Python</li>
-                <li>Tools: Canva, GitHub, Visual Studio Code, Tinkercad</li>
-                <li>Team Leadership, Public Speaking, Problem Solving</li>
-            </ul>
-        </section>
-
-        <section>
-            <h2>Projects</h2>
-            <ul>
-                <li><strong>Claw Quest:</strong> RPG-style cat game with Java + custom graphics</li>
-                <li><strong>Menstrual Cycle Tracker App:</strong> Passion project for friends and family</li>
-                <li><strong>Social Media AI Infographic:</strong> Canva research challenge entry</li>
-            </ul>
-        </section>
-
-        <section>
-            <h2>Goals</h2>
-            <p>To attend a top university for Computer Science, grow as a developer, and inspire more young women to explore STEM through leadership, mentoring, and community impact.</p>
-        </section>
-
-        <section>
-            <h2>Contact</h2>
-            <p>Email: <a href="mailto:akmatalyevanazik@gmail.com">akmatalyevanazik@gmail.com</a></p>
-            <p>Phone: <a href="tel:+17739776631">773-977-6631</a></p>
-        </section>
-
-        <footer>
-            <p>© 2025 Nazik Akmatalyeva | Built with 💻 and ☕</p>
-        </footer>
+  <header class="hero">
+    <div class="hero-content">
+      <img src="profile.jpg" alt="Nazik's Profile" class="profile-pic">
+      <h1 class="fade-in">Nazik Akmatalyeva</h1>
+      <p class="fade-in">Student • Leader • Coder</p>
+      <!--<a href="Nazik_Akmatalyeva_Resume.pdf" class="btn fade-in" download>Download Resume</a>-->
     </div>
+  </header>
+
+  <main>
+    <section id="about" class="section reveal">
+      <h2>About Me</h2>
+      <p>I'm a dedicated student at Von Steuben MSC with a 4.0 GPA and a passion for coding, education, and leadership. I love creating tech projects that help people and making STEM fun and inclusive for others.</p>
+    </section>
+
+    <section id="education" class="section reveal">
+      <h2>Education</h2>
+      <p><strong>Von Steuben Metropolitan Science Center</strong> – Chicago, IL</p>
+      <p>Graduation: 2026 | GPA: 4.0</p>
+      <p>AP & Honors: Chemistry, Algebra II, World History</p>
+    </section>
+
+    <section id="skills" class="section reveal">
+      <h2>Skills</h2>
+      <ul>
+        <li>HTML, CSS, JavaScript, Java, Python</li>
+        <li>GitHub, Canva, Figma, VS Code</li>
+        <li>Team Leadership, Problem Solving, UX Design</li>
+      </ul>
+    </section>
+
+    <section id="projects" class="section reveal">
+      <h2>Projects</h2>
+      <ul>
+        <li><strong>Claw Quest:</strong> A 16x16 adventure RPG game coded in Java.</li>
+        <li><strong>Period Tracker App:</strong> Concept for a health-focused mobile app.</li>
+        <li><strong>AI & Social Media Infographic:</strong> Presented for a research challenge.</li>
+      </ul>
+    </section>
+
+    <section id="contact" class="section reveal">
+      <h2>Contact</h2>
+      <p>Email: <a href="mailto:akmatalyevanazik@gmail.com">akmatalyevanazik@gmail.com</a></p>
+      <p>Phone: <a href="tel:+17739776631">773-977-6631</a></p>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Nazik Akmatalyeva | Built by Me with 💻</p>
+  </footer>
 </body>
 </html>
