--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
   <main>
     <section id="about" class="section reveal">
       <h2>About Me</h2>
-      <p>I'm a dedicated student at Von Steuben MSC with a 4.0 GPA and a passion for coding, education, and leadership. I love creating tech projects that help people and making STEM fun and inclusive for others.</p>
+      <p>Hi! I'm Nazik, a passionate and driven high school student at Von Steuben Metropolitan Science Center in Chicago. With a strong academic foundation and a 4.0 GPA, I'm deeply interested in the intersection of technology, leadership, and education. I’ve taken on challenging courses like AP Chemistry, Algebra II, and World History while also leading my school’s Girls Who Code club, where I mentor others and create opportunities for students to explore coding in fun, inclusive ways.</p>
     </section>
 
     <section id="education" class="section reveal">
       <h2>Education</h2>
       <p><strong>Von Steuben Metropolitan Science Center</strong> – Chicago, IL</p>
       <p>Graduation: 2026 | GPA: 4.0</p>
-      <p>AP & Honors: Chemistry, Algebra II, World History</p>
+       <p>Outside of the classroom, I’ve won multiple judo championships, participated in After School Matters programs like Audio Electronics and Web Development, and led community workshops. My goal is to keep growing as a learner and leader, while inspiring others to discover the power of tech.</p>
     </section>
 
     <section id="skills" class="section reveal">
@@ -62,8 +62,8 @@
 
     <section id="contact" class="section reveal">
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:akmatalyevanazik@gmail.com">akmatalyevanazik@gmail.com</a></p>
-      <p>Phone: <a href="tel:+17739776631">773-977-6631</a></p>
+        <p>Email: <a href="mailto:nazik@example.com">nazik@example.com</a></p>
+        <p>Phone: <a href="tel:+13125550198">(312) 555-0198</a></p>
     </section>
   </main>
 
