--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <header class="hero">
     <div class="hero-content">
       <img src="images/profilePicture.png" alt="Nazik's Profile" class="profile-pic">
-      <h1 class="fade-in">Nazik Akmatalyeva</h1>
+      <h1 class="fade-in">Nazik</h1>
       <p class="fade-in">Student • Leader • Coder</p>
       <!--<a href="Nazik_Akmatalyeva_Resume.pdf" class="btn fade-in" download>Download Resume</a>-->
     </div>
